--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,16 @@
         android:layout_marginTop="80dp"
         android:text="Barangay Responder"
         android:textAllCaps="false">
+    </Button>
+
+    <Button
+        android:id="@+id/btnmap"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="150dp"
+        android:text="Google Map"
+        android:textAllCaps="false">
 
     </Button>
 </FrameLayout>
