--- a/app/src/main/res/layout/activity_brgy_map_interface.xml
+++ b/app/src/main/res/layout/activity_brgy_map_interface.xml
@@ -4,7 +4,6 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
@@ -19,22 +18,22 @@
         android:layout_marginBottom="20dp"
         android:layout_height="140dp"
         >
-    <android.support.design.widget.FloatingActionButton
-        android:layout_width="126dp"
-        android:layout_height="120dp"
-        android:layout_gravity="center"
-        android:clickable="true"
-        app:backgroundTint="?android:attr/colorPrimary"/>
+        <android.support.design.widget.FloatingActionButton
+            android:layout_width="126dp"
+            android:layout_height="120dp"
+            android:layout_gravity="center"
+            android:clickable="true"
+            app:backgroundTint="?android:attr/colorPrimary"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:elevation="10dp"
-        android:text="GET HELP"
-        android:textColor="#FFFFFF"
-        android:textStyle="bold"
-        android:textSize="20dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:elevation="10dp"
+            android:text="RESPOND!"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold"
+            android:textSize="20dp" />
     </FrameLayout>
 
 </FrameLayout>
