--- a/app/src/main/res/layout/activity_main_hospital.xml
+++ b/app/src/main/res/layout/activity_main_hospital.xml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:padding="6dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_alignParentTop="true"
         xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="350dp"
+        tools:context=".Hospital.MainHospital"
         android:id="@+id/map"
-        tools:context=".UserMapInterface"
-        android:name="com.google.android.gms.maps.SupportMapFragment"/>
-
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="480dp"
+        />
     <FrameLayout
+
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
         android:layout_width="140dp"
         android:layout_gravity="bottom|center"
         android:layout_marginBottom="10dp"
@@ -23,18 +29,20 @@
             android:layout_width="126dp"
             android:layout_height="120dp"
             android:layout_gravity="center"
+            android:id="@+id/fab_search_hospital"
             android:clickable="true"
             app:backgroundTint="?android:attr/colorPrimary"/>
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="78dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:elevation="10dp"
-            android:text="RESPOND"
+            android:textAlignment="center"
+            android:text="Search Hospital"
             android:textColor="#FFFFFF"
-            android:textStyle="bold"
-            android:textSize="20dp" />
+            android:textSize="20dp"
+            android:textStyle="bold" />
     </FrameLayout>
 
-</FrameLayout>
+</RelativeLayout>
