--- a/app/src/main/res/layout/activity_sample2.xml
+++ b/app/src/main/res/layout/activity_sample2.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:padding="6dp"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -16,7 +17,7 @@
     <FrameLayout
         android:layout_width="140dp"
         android:layout_gravity="bottom|center"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:layout_height="140dp"
         >
     <android.support.design.widget.FloatingActionButton
